<resources>
    <string name="app_name">PPlus</string>
    <string name="account_id">Account id:</string>
    <string name="enter_your_account_id">Enter your account id</string>
    <string name="enter_your_account_code">Enter your account code</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="login_as_client">Login as client</string>
    <string name="inventory">Inventory</string>
    <string name="stock">Stock</string>
    <string name="sale">Sale</string>
    <string name="mobile_solution_for_your_business">Mobile solution for your business</string>
    <string name="no_order_found">No order found</string>
    <string name="order">Order</string>
    <string name="dashboard">Dashboard</string>
    <string name="category">Category</string>
    <string name="add_and_manage_your_category">Add and Manage your category</string>
    <string name="add_and_manage_your_product">Add and Manage your product</string>
    <string name="product">Product</string>
    <string name="manage">Manage</string>
    <string name="code">CODE:</string>
    <string name="qty">Qty</string>
    <string name="add_category">Add Category</string>
    <string name="confirmation">Confirmation</string>
    <string name="congratulation">Congratulation</string>
    <string name="add_product">Add Product</string>
    <string name="select_category">Select category</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="search">Search</string>
    <string name="none">None</string>
    <string name="category_has_been_created">Category has been created</string>
    <string name="add_more">ADD MORE</string>
    <string name="back">BACK</string>
    <string name="please_input_category_name">Please input category name</string>
    <string name="main_category">Main Category</string>
    <string name="category_info">Category Info</string>
    <string name="category_name">Category name</string>
    <string name="is_sub_category_of">Is sub category of:</string>
    <string name="create">Create</string>
    <string name="sub_category">Sub Category</string>
    <string name="product_has_been_created">Product has been created</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_input_product_code">Please input product code</string>
    <string name="please_input_product_name">Please input product name</string>
    <string name="product_of_category">Product of Category:</string>
    <string name="product_code">Product code</string>
    <string name="product_name">Product name</string>
    <string name="product_info">Product Info</string>
    <string name="add_stock">Add Stock</string>
    <string name="select_product">Select product</string>
    <string name="stock_info">Stock Info</string>
    <string name="add">Add</string>
    <string name="select_currency">Select currency</string>
    <string name="please_set_the_price">Please set the price</string>
    <string name="product_selection">Product Selection</string>
    <string name="please_select_product">Please select product</string>
    <string name="please_set_the_quantity">Please set the quantity</string>
    <string name="stock_has_been_added">Stock has been added</string>
    <string name="product_detail">Product Detail</string>
    <string name="about_product">About Product</string>
    <string name="about_stock">About Stock</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="in_category">In Category:</string>
    <string name="price">Price:</string>
    <string name="create_date">Create date:</string>
    <string name="quantity_in_stock">Quantity in stock:</string>
    <string name="import_date">Last import date:</string>
    <string name="no_detail_product">No detail about this product</string>
    <string name="update_stock">Update Stock</string>
    <string name="update_product">Update Product</string>
    <string name="view_import">View Import</string>
    <string name="refreshing">Refreshing</string>
    <string name="update_product_success">Update product successful</string>
    <string name="update_date">Update date:</string>
    <string name="product_has_qty">Product has quantity:</string>
    <string name="in_stock">in stock.</string>
    <string name="stock_import_transaction">Stock Import History</string>
    <string name="import_on">Import on:</string>
    <string name="got_it">Got It</string>
    <string name="sorry_you_cannot_delete_cat">Sorry you cannot delete this category.</string>
    <string name="there_is_some_product_belong">There is some product belong to it.</string>
    <string name="there_is_some_category_belong">There is some sub category belong to it.</string>
</resources>
