<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/about_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />
            <TextView
                android:id="@+id/tv_id"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_category" />
            <TextView
                android:id="@+id/tv_category"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code" />
            <TextView
                android:id="@+id/tv_code"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />
            <TextView
                android:id="@+id/tv_price"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_date" />
            <TextView
                android:id="@+id/tv_create_date"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/about_stock" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_in_stock" />
            <TextView
                android:id="@+id/tv_quantity"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_date" />
            <TextView
                android:id="@+id/tv_import_date"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>