<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/frame"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:rotation="180"
            android:src="@drawable/header_system_logo" />

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_id"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/ed_account_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_account_id"
                android:maxLength="7"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Account code:"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/ed_account_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_account_code"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/default_button"
                android:text="@string/login"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAllCaps="true"
                    android:text="@string/or" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"></View>

            </LinearLayout>


            <Button
                android:id="@+id/btn_login_as_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/default_button"
                android:text="@string/login_as_client"
                android:textAllCaps="false" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:gravity="top"
            android:src="@drawable/footer_system_logo" />
    </LinearLayout>
</ScrollView>